# openstreetmap-statistics

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  generate_plots.sh  index.css  index.html  index.js  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: main.yml  update_corporate_contributors.yml  update_data.yml  update_data_on_hf.yml  update_notebooks.yml
archive/: index.html
archive/assets/: statistic_website.css  util.js
assets/: corporation_contributors.json  data.js  how_many_people_are_contributing_to_osm.html  organised_teams_contributors.json  plotly-custom.min.js  statistic_website.js  style.css  table.css  util.js
assets/data/: all_tags_top_100_changeset_count_monthly.json  all_tags_top_100_changeset_count_total.json  all_tags_top_100_changeset_count_yearly.json  all_tags_top_100_changeset_count_yearly_total.json  all_tags_top_10_changeset_count_monthly.json  all_tags_top_10_changeset_count_monthly_percent.json  bot_avg_edit_count_per_changeset_monthly.json  bot_changeset_count_monthly.json  bot_changeset_count_monthly_accumulated.json  bot_contributor_count_monthly.json  bot_created_by_top_100_edit_count_monthly.json  bot_created_by_top_100_edit_count_total.json  bot_created_by_top_100_edit_count_yearly.json  bot_created_by_top_100_edit_count_yearly_total.json  bot_edit_count_map_total.json  bot_edit_count_monthly.json  bot_edit_count_monthly_accumulated.json  bot_edit_count_monthly_percent.json  bot_new_contributor_count_monthly.json  bot_new_contributor_count_monthly_accumulated.json  corporation_name_to_link.json  corporation_top_100_changeset_count_monthly.json  corporation_top_100_changeset_count_total.json  corporation_top_100_contributor_count_total.json  corporation_top_100_edit_count_monthly.json  corporation_top_100_edit_count_monthly_sum_top_k.json  corporation_top_100_edit_count_monthly_sum_top_k_percent.json  corporation_top_100_edit_count_total.json  corporation_top_100_edit_count_yearly.json  corporation_top_100_edit_count_yearly_total.json  corporation_top_100_new_contributor_count_monthly.json  (+158 more)
config/: corporation_contributors.json  organised_teams.json  organised_teams_contributors.json  replace_rules_created_by.json
jupyter_lite/: jupyter-lite.json
notebooks/: 01_general.ipynb  02_editing_software.ipynb  03_organised_teams.ipynb  04_streetcomplete.ipynb  05_hashtags.ipynb  06_bot.ipynb  07_imagery_service.ipynb  08_source.ipynb  09_tags.ipynb  10_notes.ipynb  11_changeset_comments.ipynb  editing_software.ipynb  edition_software.ipynb  general.ipynb  notebook.css  notebook.js  util.py
openstreetmap_statistics/: _version.py  calculate_asset_data.py  changeset_to_table.py  create_test_osm_bz2_file.py  enrich_table.py  notebook_to_html.py  preprocessing.py  save_corporation_contributors.py
scripts/: changeset_osm_to_raw_data.py  changeset_raw_data_to_data.py  changeset_to_table.py  create_test_osm_bz2_file.py  enrich_table.py  notebook_to_html.py  notes_osm_to_data.py  save_organised_teams.py  upload_data_to_huggingface.sh  upload_to_huggingface.sh
src/: add_topic_bot.py  add_topic_changeset_tags.py  add_topic_corporation.py  add_topic_editing_software.py  add_topic_general.py  add_topic_hashtags.py  add_topic_hotosm.py  add_topic_imagery_service.py  add_topic_source.py  add_topic_streetcomplete.py  changeset_to_parquet.py  compress_datajs.py  create_new_unique_url_hash.py  custom_data_and_plots.ipynb  custom_plots_browser.ipynb  data_crunching_and_saving.py  finde_new_replace_rule_candidates.py  how_many_people_are_contributing_to_osm.ipynb  links.json  new_util.py  parquet_to_json_stats.py  replace_rules_created_by.json  replace_rules_imagery_and_source.json  save_background_map.py  save_changesets_csv.py  save_corporation_contibutors.py  save_corporation_contributors.py  save_organised_teams_contributors.py  save_top_k.py  util.py
stats/: 01_general.html  02_editing_software.html  03_organised_teams.html  04_streetcomplete.html  05_hashtags.html  06_bot.html  07_imagery_service.html  08_source.html  09_tags.html  10_notes.html  11_changeset_comments.html  12_interactive.html  editing_software.html  edition_software.html  index.html  notebook_styles.css  test.html
templates/: interactive.html
test/: test_preprocessing.py
tests/: test_changeset_raw_data_to_data.py  test_enrich_table.py
(+288 files in other folders)
