[project]
name = "openstreetmapStatistics"
version = "0.1.0"
description = "A python library to create statistics about OpenStreetMap using OSM-Changesets."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Piet Brömmel", email = "piet.broemmel@gmail.com"}
]
keywords = ["openstreetmap", "statistics", "osm"]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.0",
    "nbconvert==7.14.2",
    "jupyter",
    "plotly",
    "tqdm",
    "osmium",
    "pyarrow>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/piebro/openstreetmap-statistics/"
Repository = "https://github.com/piebro/openstreetmap-statistics/"
Issues = "https://github.com/piebro/openstreetmap-statistics/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "codespell",
    "pytest",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.ruff]
line-length = 120
exclude = [
    "assets",
]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B018",     # Found useless expression.
    "I",        # isort
    "RUF",      # ruff
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openstreetmap-statistics"]

[tool.setuptools_scm]
# This will write the version to _version.py, used during packaging and at runtime
write_to = "openstreetmap_statistics/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"
