[project]
name = "openstreetmapStatistics"
version = "0.1.0"
description = "A collection of Python scripts to create statistics about OpenStreetMap using OSM-Changesets."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Piet Brömmel", email = "piet.broemmel@gmail.com"}
]
keywords = ["openstreetmap", "statistics", "osm"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "duckdb>=1.3.2",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipynbname>=2025.8.0.0",
    "jinja2>=3.1.0",
    "kaleido>=1.0.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "osmium>=4.0.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/piebro/openstreetmap-statistics/"
Repository = "https://github.com/piebro/openstreetmap-statistics/"
Issues = "https://github.com/piebro/openstreetmap-statistics/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B018",     # Found useless expression.
    "I",        # isort
    "RUF",      # ruff
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

