[project]
name = "openstreetmapStatistics"
version = "0.1.0"
description = "A collection of Python scripts to create statistics about OpenStreetMap using OSM-Changesets."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Piet Brömmel", email = "piet.broemmel@gmail.com"}
]
keywords = ["openstreetmap", "statistics", "osm"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.0",
    "huggingface-hub>=1.6.0",
    "ipykernel>=7.2.0",
    "ipynbname>=2025.8.0.0",
    "jinja2>=3.1.6",
    "kaleido>=1.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "osmium>=4.3.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
]

[project.urls]
Homepage = "https://github.com/piebro/openstreetmap-statistics/"
Repository = "https://github.com/piebro/openstreetmap-statistics/"
Issues = "https://github.com/piebro/openstreetmap-statistics/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B018",     # Found useless expression.
    "I",        # isort
    "RUF",      # ruff
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

